# M-S-Algorithms-

./: .gitignore  Cargo.toml  DEPLOYMENT-GUIDE.md  LOGIN-INFO.md  README-Desktop.md  README-TypeScript.md  README.md  RENDER-CHECKLIST.md  RENDER-DEPLOYMENT-GUIDE.md  RENDER-DEPLOYMENT-INSTRUCTIONS.md  RENDER-RISK-PREMIUMS-SETUP.md  TROUBLESHOOTING-DEPLOYMENT.md  Trunk.toml  WHATS-NEXT.md  deploy-server.bat  package-lock.json  package.json  push-to-github.bat  render.yaml
MS-Portal-Website/: ANIMATIONS-REFERENCE.md  CLEANUP-GUIDE.md  CREATE-DESKTOP-SHORTCUT.bat  DATA-SOURCES-REFERENCE.md  DESKTOP-SHORTCUT-INSTRUCTIONS.md  IMPLEMENTATION-SUMMARY.md  M&S .json  M&S_Portal_Architecture_Documentation.md  MS-DESIGN-SYSTEM-COMPLETE.html  MS-DESIGN-SYSTEM-README.md  QUICK-START-GUIDE.md  QUICK-START-RISK-PREMIUMS.md  README-ENHANCED.md  RISK-PREMIUMS-EXPLAINED.md  RISK-PREMIUMS-SETUP.md  SECURITY-GUIDE.md  animations-demo.html  build.bat  calendar-events.json  calendar.html  calendar.js  dashboard-styles.css  dashboard.html  dashboard.js  index-original.html  index.html  install.bat  main.js  menu-page.html  menu-page.js  ms-animations-styles.css  ms-design-system.json  ms-variables.css  package-lock.json  package.json  principles-data.json  script.js  server.js  simple-server.js  start-server.bat  (+3 more)
frontend/: Cargo.toml  index.html
frontend-ts/: index.html  package.json  tsconfig.json  (+1 more)
frontend/src/: lib.rs  types.rs
frontend/src/components/: dashboard.rs  login.rs  mod.rs
frontend/src/services/: auth.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+22 files in other folders)
