[package]
name = "ms-portal-desktop"
version = "0.1.0"
description = "MS Portal Desktop Application"
authors = ["Peter"]
edition = "2021"

# Empty workspace to make this independent
[workspace]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"] 
